@@ -1,3 +1,15 @@
+2012-11-08  Eli Fidler  <efidler@rim.com>
+
+        [BlackBerry] Increase memory cache size
+        https://bugs.webkit.org/show_bug.cgi?id=101622
+
+        Reviewed by Yong Li.
+
+        * WebCoreSupport/CacheClientBlackBerry.cpp:
+        (WebCore::CacheClientBlackBerry::updateCacheCapacity):
+        * WebCoreSupport/CacheClientBlackBerry.h:
+        (CacheClientBlackBerry):
+
 2012-11-08  Jakob Petsovits  <jpetsovits@rim.com>
 
         [BlackBerry] Rework the API to use document coordinates
